Fix color contrast issue

--- a/css/custom/_variables.scss
+++ b/css/custom/_variables.scss
@@ -3,4 +3,4 @@ SPDX-FileCopyrightText: 2020 Cam N. Coulter <cam@cncoulter.com>
 SPDX-License-Identifier: CC0-1.0
 */
 
-// $primary: #FF851B; // uncomment this line to change Bootstrap's primary color to orange
+$primary: #0071EA; // update Bootstrap's primary blue color so that the color contrast between this color and #FFF is WCAG AA conformant
